[package]
name = "game_engine"
version = "0.1.0"
authors = ["drakobian <drake.bennion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20.0"
rand = "0.8.4"

[profile.dev]
opt-level = 3               # Use the most optimizations.
overflow-checks = false     # Disable integer overflow checks.