[package]
name = "olc_rust_game_engine"
version = "0.3.11"
authors = ["drakobian <drake.bennion@gmail.com>"]
edition = "2018"
description = "A Rust beginner's port of a console game engine"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyboard_query = "0.1.0"
glium = "*"